--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "style-loader": "^3.3.1",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0"
+  },
+  "dependencies": {
+    "@types/jest": "^28.1.6"
   }
 }
